--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Timestamp Generator</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
     <div class="container">
@@ -21,7 +21,7 @@
         </code>
       </h1>
     </div>
-    <a id="about" class="label label-info" href="http://odran037.io" target="_target">?</a>
+    <a id="about" class="label label-info" href="https://github.com/ProgrammedMikey/timestamp-microservice" target="_target">?</a>
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="js/app.js"></script>
